software/serial-com/ESP_UART_IN/build/log/idf_py_stdout_output_28476
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\sabri\Documents\Uni_Y4\4TB6\Capstone\capstone\software\serial-com\ESP_UART_IN\build\bootloader\esp-idf\esptool_py && C:\Users\sabri\.espressif\python_env\idf5.4_py3.8_env\Scripts\python.exe C:/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/sabri/Documents/Uni_Y4/4TB6/Capstone/capstone/software/serial-com/ESP_UART_IN/build/bootloader/bootloader.bin"
Bootloader binary size 0x6560 bytes. 0xaa0 bytes (9%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ESP_UART_IN.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/ESP_UART_IN.c.obj 
ccache C:\Users\sabri\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/sabri/Documents/Uni_Y4/4TB6/Capstone/capstone/software/serial-com/ESP_UART_IN/build/config -IC:/Users/sabri/Documents/Uni_Y4/4TB6/Capstone/capstone/software/serial-com/ESP_UART_IN/main -IC:/esp/esp-idf/components/newlib/platform_include -IC:/esp/esp-idf/components/freertos/config/include -IC:/esp/esp-idf/components/freertos/config/include/freertos -IC:/esp/esp-idf/components/freertos/config/xtensa/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/esp-idf/components/freertos/esp_additions/include -IC:/esp/esp-idf/components/esp_hw_support/include -IC:/esp/esp-idf/components/esp_hw_support/include/soc -IC:/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/esp/esp-idf/components/esp_hw_support/dma/include -IC:/esp/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/esp-idf/components/esp_hw_support/port/esp32/. -IC:/esp/esp-idf/components/esp_hw_support/port/esp32/include -IC:/esp/esp-idf/components/heap/include -IC:/esp/esp-idf/components/heap/tlsf -IC:/esp/esp-idf/components/log/include -IC:/esp/esp-idf/components/soc/include -IC:/esp/esp-idf/components/soc/esp32 -IC:/esp/esp-idf/components/soc/esp32/include -IC:/esp/esp-idf/components/soc/esp32/register -IC:/esp/esp-idf/components/hal/platform_port/include -IC:/esp/esp-idf/components/hal/esp32/include -IC:/esp/esp-idf/components/hal/include -IC:/esp/esp-idf/components/esp_rom/include -IC:/esp/esp-idf/components/esp_rom/esp32/include -IC:/esp/esp-idf/components/esp_rom/esp32/include/esp32 -IC:/esp/esp-idf/components/esp_rom/esp32 -IC:/esp/esp-idf/components/esp_common/include -IC:/esp/esp-idf/components/esp_system/include -IC:/esp/esp-idf/components/esp_system/port/soc -IC:/esp/esp-idf/components/esp_system/port/include/private -IC:/esp/esp-idf/components/xtensa/esp32/include -IC:/esp/esp-idf/components/xtensa/include -IC:/esp/esp-idf/components/xtensa/deprecated_include -IC:/esp/esp-idf/components/lwip/include -IC:/esp/esp-idf/components/lwip/include/apps -IC:/esp/esp-idf/components/lwip/include/apps/sntp -IC:/esp/esp-idf/components/lwip/lwip/src/include -IC:/esp/esp-idf/components/lwip/port/include -IC:/esp/esp-idf/components/lwip/port/freertos/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/esp-idf/components/esp_driver_uart/include -IC:/esp/esp-idf/components/vfs/include -IC:/esp/esp-idf/components/esp_driver_gpio/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/sabri/Documents/Uni_Y4/4TB6/Capstone/capstone/software/serial-com/ESP_UART_IN=. -fmacro-prefix-map=C:/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/ESP_UART_IN.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\ESP_UART_IN.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/ESP_UART_IN.c.obj -c C:/Users/sabri/Documents/Uni_Y4/4TB6/Capstone/capstone/software/serial-com/ESP_UART_IN/main/ESP_UART_IN.c
C:/Users/sabri/Documents/Uni_Y4/4TB6/Capstone/capstone/software/serial-com/ESP_UART_IN/main/ESP_UART_IN.c: In function 'rx_task':
C:/Users/sabri/Documents/Uni_Y4/4TB6/Capstone/capstone/software/serial-com/ESP_UART_IN/main/ESP_UART_IN.c:101:13: error: implicit declaration of function 'delay' [-Wimplicit-function-declaration]
  101 |             delay(1000);                      // wait for second
      |             ^~~~~
ninja: build stopped: subcommand failed.
